
  Closes #6394

* Don't emit ``unsubscriptable-object`` for string annotations.
  Pylint doesn't check if class is only generic in type stubs only.

  Closes #4369 and #6523

* Fix pyreverse crash ``RuntimeError: dictionary changed size during iteration``

  Relates to #6612

* Fix syntax for return type annotations in MermaidJS diagrams produced with ``pyreverse``.

  Closes #6467

* Fix bug where it writes a plain text error message to stdout, invalidating output formats.

  Closes #6597

* ``is_class_subscriptable_pep585_with_postponed_evaluation_enabled`` has been deprecated.
  Use ``is_postponed_evaluation_enabled(node) and is_node_in_type_annotation_context(node)``
  instead.

  Ref #6536

* Update ranges for ``using-constant-test`` and ``missing-parentheses-for-call-in-test``
  error messages.

* Don't emit ``no-member`` inside type annotations with
  ``from __future__ import annotations``.

  Closes #6594

..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.9?
============================
Release date: 2022-05-13


* Respect ignore configuration options with ``--recursive=y``.

  Closes #6471

* Fix false positives for ``no-name-in-module`` and ``import-error`` for ``numpy.distutils`` and ``pydantic``.

  Closes #6497

* Fix ``IndexError`` crash in ``uninferable_final_decorators`` method.

 Relates to #6531

* Fix a crash in ``unnecessary-dict-index-lookup`` when subscripting an attribute.

  Closes #6557

* Fix a crash when accessing ``__code__`` and assigning it to a variable.

  Closes #6539

* Fix a false positive for ``undefined-loop-variable`` when using ``enumerate()``.

  Closes #6593


What's New in Pylint 2.13.8?
============================
Release date: 2022-05-02

* Fix a false positive for ``undefined-loop-variable`` for a variable used in a lambda
  inside the first of multiple loops.

  Closes #6419
