@@ -1,0 +1,10 @@
+classDiagram
+  class Dummy {
+  }
+  class Dummy2 {
+    alternative_union_syntax : str | int
+    class_attr : list[Dummy]
+    optional : Optional[Dummy]
+    param : str
+    union : Union[int, str]
+  }
