@@ -338,6 +338,8 @@ Release date: TBA
 
   Closes #6467
 
+* Fix type annotations of class and instance attributes using the alternative union syntax.
+
 * Fix bug where it writes a plain text error message to stdout, invalidating output formats.
 
   Closes #6597
